@@ -1,5 +1,10 @@
 2008-06-23  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/commands/rdepends.py: catch KeyError on invalid module and
+	display a nice error message.
+
+2008-06-23  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/commands/info.py: fixed case insensitiveness patch.
 	(closes: #538790)
 
